// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AuxRuntime interpreted resolveModule() should be able to resolve tag-specific API functions when given import metadata 1`] = `
Array [
  "_getBots",
  "__getBots",
  "getBots",
  "_getBot",
  "__getBot",
  "getBot",
  "getBotTagValues",
  "getMod",
  "getBotPosition",
  "getBotRotation",
  "getID",
  "getJSON",
  "getFormattedJSON",
  "getSnapshot",
  "diffSnapshots",
  "applyDiffToSnapshot",
  "getTag",
  "setTag",
  "setTagMask",
  "clearTagMasks",
  "insertTagText",
  "insertTagMaskText",
  "deleteTagText",
  "deleteTagMaskText",
  "removeTags",
  "renameTag",
  "applyMod",
  "subtractMods",
  "_create",
  "_destroy",
  "destroy",
  "_changeState",
  "changeState",
  "getLink",
  "getBotLinks",
  "_updateBotLinks",
  "updateBotLinks",
  "getDateTime",
  "DateTime",
  "Vector2",
  "Vector3",
  "Quaternion",
  "Rotation",
  "superShout",
  "_priorityShout",
  "priorityShout",
  "_shout",
  "shout",
  "_whisper",
  "whisper",
  "byTag",
  "byID",
  "byMod",
  "inDimension",
  "atPosition",
  "inStack",
  "neighboring",
  "bySpace",
  "byCreator",
  "either",
  "not",
  "remote",
  "sendRemoteData",
  "remoteWhisper",
  "remoteShout",
  "uuid",
  "_animateTag",
  "__animateTag",
  "animateTag",
  "clearAnimations",
  "webhook",
  "sleep",
  "__energyCheck",
  "clearTimeout",
  "clearInterval",
  "clearWatchBot",
  "clearWatchPortal",
  "assert",
  "assertEqual",
  "expect",
  "html",
  "_configBot",
  "ai",
  "os",
  "xp",
  "portal",
  "server",
  "action",
  "experiment",
  "loom",
  "math",
  "mod",
  "bytes",
  "crypto",
  "perf",
  "web",
  "analytics",
  "create",
  "setTimeout",
  "setInterval",
  "watchPortal",
  "watchBot",
]
`;

exports[`AuxRuntime interpreted resolveModule() should resolve a special module for the "casualos" module 1`] = `
Array [
  "_getBots",
  "__getBots",
  "getBots",
  "_getBot",
  "__getBot",
  "getBot",
  "getBotTagValues",
  "getMod",
  "getBotPosition",
  "getBotRotation",
  "getID",
  "getJSON",
  "getFormattedJSON",
  "getSnapshot",
  "diffSnapshots",
  "applyDiffToSnapshot",
  "getTag",
  "setTag",
  "setTagMask",
  "clearTagMasks",
  "insertTagText",
  "insertTagMaskText",
  "deleteTagText",
  "deleteTagMaskText",
  "removeTags",
  "renameTag",
  "applyMod",
  "subtractMods",
  "_create",
  "_destroy",
  "destroy",
  "_changeState",
  "changeState",
  "getLink",
  "getBotLinks",
  "_updateBotLinks",
  "updateBotLinks",
  "getDateTime",
  "DateTime",
  "Vector2",
  "Vector3",
  "Quaternion",
  "Rotation",
  "superShout",
  "_priorityShout",
  "priorityShout",
  "_shout",
  "shout",
  "_whisper",
  "whisper",
  "byTag",
  "byID",
  "byMod",
  "inDimension",
  "atPosition",
  "inStack",
  "neighboring",
  "bySpace",
  "byCreator",
  "either",
  "not",
  "remote",
  "sendRemoteData",
  "remoteWhisper",
  "remoteShout",
  "uuid",
  "_animateTag",
  "__animateTag",
  "animateTag",
  "clearAnimations",
  "webhook",
  "sleep",
  "__energyCheck",
  "clearTimeout",
  "clearInterval",
  "clearWatchBot",
  "clearWatchPortal",
  "assert",
  "assertEqual",
  "expect",
  "html",
  "_configBot",
  "ai",
  "os",
  "xp",
  "portal",
  "server",
  "action",
  "experiment",
  "loom",
  "math",
  "mod",
  "bytes",
  "crypto",
  "perf",
  "web",
  "analytics",
  "create",
  "setTimeout",
  "setInterval",
  "watchPortal",
  "watchBot",
]
`;

exports[`AuxRuntime interpreted shout() globalThis should not allow deleting properties from globalThis 1`] = `
Object {
  "actions": Array [],
  "errors": Array [],
  "listeners": Array [],
  "results": Array [
    undefined,
  ],
}
`;

exports[`AuxRuntime interpreted shout() should compile listeners to use the html.h() function for JSX 1`] = `
Array [
  <div />,
]
`;

exports[`AuxRuntime not-interpreted os.createDebugger() getCallStack() should return the current call stack for the debugger 1`] = `
ExecutionContextStack [
  Object {
    "listVariables": [Function],
    "location": null,
    "setVariableValue": [Function],
  },
  Object {
    "listVariables": [Function],
    "location": Object {
      "botId": "uuid-1",
      "columnNumber": 1,
      "lineNumber": 1,
      "name": "onShout",
      "tag": "onShout",
    },
    "setVariableValue": [Function],
  },
  Object {
    "listVariables": [Function],
    "location": Object {
      "name": "toast",
    },
    "setVariableValue": [Function],
  },
]
`;

exports[`AuxRuntime not-interpreted os.createDebugger() interpreter should be able to list variables  1`] = `
Array [
  "args",
  "arguments",
  "that",
  "data",
  "$__bot",
  "$__tag",
  "___importModule",
  "___exportModule",
  "create",
  "setTimeout",
  "setInterval",
  "watchPortal",
  "watchBot",
  "thisBot",
  "bot",
  "tags",
  "raw",
  "masks",
  "creatorBot",
  "configBot",
  "links",
  "____importModule",
]
`;

exports[`AuxRuntime not-interpreted os.createDebugger() interpreter should be able to list variables  2`] = `
Array [
  "_1",
  "constants",
  "variables",
  "context",
  "arguments",
  "_getBots",
  "__getBots",
  "getBots",
  "_getBot",
  "__getBot",
  "getBot",
  "getBotTagValues",
  "getMod",
  "getBotPosition",
  "getBotRotation",
  "getID",
  "getJSON",
  "getFormattedJSON",
  "getSnapshot",
  "diffSnapshots",
  "applyDiffToSnapshot",
  "getTag",
  "setTag",
  "setTagMask",
  "clearTagMasks",
  "insertTagText",
  "insertTagMaskText",
  "deleteTagText",
  "deleteTagMaskText",
  "removeTags",
  "renameTag",
  "applyMod",
  "subtractMods",
  "_create",
  "_destroy",
  "destroy",
  "_changeState",
  "changeState",
  "getLink",
  "getBotLinks",
  "_updateBotLinks",
  "updateBotLinks",
  "getDateTime",
  "DateTime",
  "Vector2",
  "Vector3",
  "Quaternion",
  "Rotation",
  "superShout",
  "_priorityShout",
  "priorityShout",
  "_shout",
  "shout",
  "_whisper",
  "whisper",
  "byTag",
  "byID",
  "byMod",
  "inDimension",
  "atPosition",
  "inStack",
  "neighboring",
  "bySpace",
  "byCreator",
  "either",
  "not",
  "remote",
  "sendRemoteData",
  "remoteWhisper",
  "remoteShout",
  "uuid",
  "_animateTag",
  "__animateTag",
  "animateTag",
  "clearAnimations",
  "webhook",
  "sleep",
  "__energyCheck",
  "clearTimeout",
  "clearInterval",
  "clearWatchBot",
  "clearWatchPortal",
  "assert",
  "assertEqual",
  "expect",
  "html",
  "_configBot",
  "ai",
  "os",
  "xp",
  "portal",
  "server",
  "action",
  "experiment",
  "loom",
  "math",
  "mod",
  "bytes",
  "crypto",
  "perf",
  "web",
  "analytics",
  "tagName",
  "___importMeta",
  "test",
]
`;

exports[`AuxRuntime not-interpreted resolveModule() should be able to resolve tag-specific API functions when given import metadata 1`] = `
Array [
  "_getBots",
  "__getBots",
  "getBots",
  "_getBot",
  "__getBot",
  "getBot",
  "getBotTagValues",
  "getMod",
  "getBotPosition",
  "getBotRotation",
  "getID",
  "getJSON",
  "getFormattedJSON",
  "getSnapshot",
  "diffSnapshots",
  "applyDiffToSnapshot",
  "getTag",
  "setTag",
  "setTagMask",
  "clearTagMasks",
  "insertTagText",
  "insertTagMaskText",
  "deleteTagText",
  "deleteTagMaskText",
  "removeTags",
  "renameTag",
  "applyMod",
  "subtractMods",
  "_create",
  "_destroy",
  "destroy",
  "_changeState",
  "changeState",
  "getLink",
  "getBotLinks",
  "_updateBotLinks",
  "updateBotLinks",
  "getDateTime",
  "DateTime",
  "Vector2",
  "Vector3",
  "Quaternion",
  "Rotation",
  "superShout",
  "_priorityShout",
  "priorityShout",
  "_shout",
  "shout",
  "_whisper",
  "whisper",
  "byTag",
  "byID",
  "byMod",
  "inDimension",
  "atPosition",
  "inStack",
  "neighboring",
  "bySpace",
  "byCreator",
  "either",
  "not",
  "remote",
  "sendRemoteData",
  "remoteWhisper",
  "remoteShout",
  "uuid",
  "_animateTag",
  "__animateTag",
  "animateTag",
  "clearAnimations",
  "webhook",
  "sleep",
  "__energyCheck",
  "clearTimeout",
  "clearInterval",
  "clearWatchBot",
  "clearWatchPortal",
  "assert",
  "assertEqual",
  "expect",
  "html",
  "_configBot",
  "ai",
  "os",
  "xp",
  "portal",
  "server",
  "action",
  "experiment",
  "loom",
  "math",
  "mod",
  "bytes",
  "crypto",
  "perf",
  "web",
  "analytics",
  "create",
  "setTimeout",
  "setInterval",
  "watchPortal",
  "watchBot",
]
`;

exports[`AuxRuntime not-interpreted resolveModule() should resolve a special module for the "casualos" module 1`] = `
Array [
  "_getBots",
  "__getBots",
  "getBots",
  "_getBot",
  "__getBot",
  "getBot",
  "getBotTagValues",
  "getMod",
  "getBotPosition",
  "getBotRotation",
  "getID",
  "getJSON",
  "getFormattedJSON",
  "getSnapshot",
  "diffSnapshots",
  "applyDiffToSnapshot",
  "getTag",
  "setTag",
  "setTagMask",
  "clearTagMasks",
  "insertTagText",
  "insertTagMaskText",
  "deleteTagText",
  "deleteTagMaskText",
  "removeTags",
  "renameTag",
  "applyMod",
  "subtractMods",
  "_create",
  "_destroy",
  "destroy",
  "_changeState",
  "changeState",
  "getLink",
  "getBotLinks",
  "_updateBotLinks",
  "updateBotLinks",
  "getDateTime",
  "DateTime",
  "Vector2",
  "Vector3",
  "Quaternion",
  "Rotation",
  "superShout",
  "_priorityShout",
  "priorityShout",
  "_shout",
  "shout",
  "_whisper",
  "whisper",
  "byTag",
  "byID",
  "byMod",
  "inDimension",
  "atPosition",
  "inStack",
  "neighboring",
  "bySpace",
  "byCreator",
  "either",
  "not",
  "remote",
  "sendRemoteData",
  "remoteWhisper",
  "remoteShout",
  "uuid",
  "_animateTag",
  "__animateTag",
  "animateTag",
  "clearAnimations",
  "webhook",
  "sleep",
  "__energyCheck",
  "clearTimeout",
  "clearInterval",
  "clearWatchBot",
  "clearWatchPortal",
  "assert",
  "assertEqual",
  "expect",
  "html",
  "_configBot",
  "ai",
  "os",
  "xp",
  "portal",
  "server",
  "action",
  "experiment",
  "loom",
  "math",
  "mod",
  "bytes",
  "crypto",
  "perf",
  "web",
  "analytics",
  "create",
  "setTimeout",
  "setInterval",
  "watchPortal",
  "watchBot",
]
`;

exports[`AuxRuntime not-interpreted shout() globalThis should not allow deleting properties from globalThis 1`] = `
Object {
  "actions": Array [],
  "errors": Array [],
  "listeners": Array [],
  "results": Array [
    undefined,
  ],
}
`;

exports[`AuxRuntime not-interpreted shout() should compile listeners to use the html.h() function for JSX 1`] = `
Array [
  <div />,
]
`;
